k8s/network-policy/kubernetes/servicea-service-cip.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: servicea-service
  labels:
    app: servicea
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: servicea-port
  selector:
    app: servicea
  type: ClusterIP
