k8s/network-policy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress  
metadata:  
  name: servicea-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
   - http:
      paths:
      - path: /servicea(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: servicea-service
            port:
              number: 5000
